[metadata]
name = pivovar-update
author = Jaroslav Henner
author-email = jhenner@redhat.com
summary = Pivovar updater
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/jaryn/pivovar-versions
;project_urls =
;    Bug Tracker = https://bugs.launchpad.net/pbr/
;    Documentation = https://docs.openstack.org/pbr/
;    Source Code = https://git.openstack.org/cgit/openstack-dev/pbr/
license = GNU GPL3
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Manufacturing
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    version update docker

[files]
packages =
    pivovar_update

[entry_points]
console_scripts =
    pivovar_update = pivovar_update:main

